--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "blogwebsite": "nodemon server.js"
+    "start": "node server.js"
+
   },
   "author": "",
   "license": "ISC",
